# pid-motor-control

./: .gitignore  CMakeLists.txt  README.md  STM32F411RETx_FLASH.ld  learning-guide.md  setup-thinkpad.sh
include/: cli.h  hal.h  motor.h  mpu6050.h  pid.h  ssd1306.h
scripts/: plot_step_response.py
src/: cli.c  gpio.c  i2c.c  main.c  motor.c  mpu6050.c  pid.c  rcc.c  ssd1306.c  startup.c  syscalls.c  timer.c  uart.c
test/: CMakeLists.txt  test_pid.c
